minor fix to icon spacing

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -102,8 +102,8 @@
 		width: 100%;
 		margin: 30px auto;
 		li {
-			width: 45px;
-			margin: 10px;
+			width: 40px;
+			margin: 12px;
 			img {
 				max-height: 45px;
 			}
