--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1390,8 +1390,8 @@ ul {
     margin: 30px auto;
   }
   .toolkit-icon-container li {
-    width: 45px;
-    margin: 10px;
+    width: 40px;
+    margin: 12px;
   }
   .toolkit-icon-container li img {
     max-height: 45px;
